Colors in config.yml

--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,8 @@ sidebar: false
 # https://unsplash.imgix.net/18/stones.JPG?q=75&fm=jpg&auto=format&s=76ebb60f03b158f746c34a088ab6ea37
 header_image: images/stones.jpg
 header_textcolor: "#FFF"
-
+header_background: "#0587bf"
+linkcolor: "#148"
 
 # Template filenames: 
 maintenance_template: maintenance_default.twig
