--- a/config.yml
+++ b/config.yml
@@ -2,6 +2,14 @@
 
 sidebar: false
 
+social:
+  'Facebook': 'https://www.facebook.com/'
+  'Google+': 'htts://plus.google.com'
+  'Twitter': 'https://twitter.com/boltcm'
+  'Github': 'https://github.com/bolt'
+  'Instagram': 'http://instagram.com'
+  'Pinterest': 'http://pinterest.com'
+
 # https://unsplash.imgix.net/18/stones.JPG?q=75&fm=jpg&auto=format&s=76ebb60f03b158f746c34a088ab6ea37
 header_image: images/stones.jpg
 header_textcolor: "#FFF"
