--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "bolt-theme",
     "keywords": ["theme", "simone", "port", "responsive", "typography"],
     "require": {
-        "bolt/bolt": ">=2.0.0,<3.0.0"
+        "bolt/bolt": "^3.0"
     },
     "license": "GPL v2",
     "authors": [
